# c-snake

./: .gitignore  CMakeLists.txt  README.md
include/: borders.h  food.h  keyboard-utils.h  math-utils.h  snake.h
src/: borders.c  food.c  keyboard-utils.c  main.c  math-utils.c  snake.c
